--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
 
 <div id="dropdownContent">
     <div id="colorDiv">
-        <div class="color-box" id="000000" style="background-color: #000000"></div>
-        <div class="color-box" id="FF0000" style="background-color: #FF0000"></div>
-        <div class="color-box" id="00FF00" style="background-color: #00FF00"></div>
-        <div class="color-box" id="0000FF" style="background-color: #0000FF"></div>
-        <div class="color-box" id="FFFFFF"><img id='eraser' title='eraser' src="assets/icons/EraserWhite-64.png"></div>
+        <div class="color-box color-black"></div>
+        <div class="color-box color-red"></div>
+        <div class="color-box color-green"></div>
+        <div class="color-box color-blue"></div>
+        <div class="color-box" id="color-eraser" ><img id='eraser' title='eraser' src="assets/icons/EraserWhite-64.png"></div>
 
     </div>
     <div id="customizeDiv">
