--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link href="css/index.css" rel="stylesheet" />
 </head>
 <body>
+<div id="brush-cursor"></div>
 <canvas id="whiteboard">
     Sorry, your browser does not support HTML5 canvas technology.
 </canvas>
@@ -32,7 +33,7 @@
     <div id="customizeDiv">
         <input id="customColor" type="text" value="#000000" maxlength="7">
         <br>
-        <input id="brushSlider" type="range" min="1" max="19" value="2">
+        <input id="brushSlider" type="range" min="1" max="19" value="5">
     </div>
 </div>
 
